<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Exercise Name Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/category_name"
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/CategoryStyle" />

            <!-- Name field -->
            <EditText
                android:id="@+id/etExerciseName"
                android:hint="@string/hint_exercise_name"
                android:inputType="textCapWords"
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/EditorFieldStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/category_description"
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/CategoryStyle" />

            <!-- Name field -->
            <EditText
                android:id="@+id/etExercieDescription"
                android:hint="@string/hint_exercise_description"
                android:inputType="textCapWords"
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/EditorFieldStyle" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Body Area Associated -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <!-- Label -->
            <TextView
                android:text="@string/category_Body_Area"
                style="@style/CategoryStyle"
                android:layout_width="0dp"
                android:layout_weight="2"/>

            <!-- Sets drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_body_area"
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <!-- Sets category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <!-- Label -->
            <TextView
                android:text="@string/category_sets"
                style="@style/CategoryStyle"
                android:layout_width="0dp"
                android:layout_weight="2"/>

                <!-- Sets drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_sets"
                    android:layout_height="48dp"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"/>
        </LinearLayout>

        <!-- Reps category -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <!-- Label -->
            <TextView
                android:text="@string/category_reps"
                style="@style/CategoryStyle"
                android:layout_width="0dp"
                android:layout_weight="2"/>

            <!-- Sets drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_reps"
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>